correct block canidait version mobile

--- a/emission_nasra/static/css/src/mobile.css
+++ b/emission_nasra/static/css/src/mobile.css
@@ -247,4 +247,10 @@
     }
     
     
+    #listing-candidats {
+        background: #eef1f8;
+        height: auto;
+        padding-bottom: 30px;
+    }
+    
 }
